# VIL

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.slim  HANDOFF-SQA-testing.md  HANDOFF-vil-bench.md  LICENSE-APACHE  LICENSE-MIT  LICENSE-VSAL  LICENSING.md  README.md  RELEASE-v0.4.0.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  blog.db  clippy.toml  deny.toml  docker-compose.yml  setup-simulators.sh  template-index.json  vil-server.reference.yaml
.cargo/: config.toml
crates/vil/: Cargo.toml  README.md
crates/vil/src/: lib.rs
crates/vil_ab_test/: Cargo.toml  README.md
crates/vil_ab_test/src/: experiment.rs  handlers.rs  lib.rs  pipeline_sse.rs  plugin.rs  report.rs  semantic.rs  stats.rs  variant.rs
crates/vil_agent/: Cargo.toml  README.md
crates/vil_agent/src/: agent.rs  extractors.rs  handlers.rs  lib.rs  memory.rs  pipeline_sse.rs  plugin.rs  semantic.rs  tool.rs
crates/vil_agent/src/tools/: calculator.rs  http_fetch.rs  mod.rs  retrieval.rs
crates/vil_ai_compiler/: Cargo.toml  README.md
crates/vil_ai_compiler/src/: compiler.rs  config.rs  dag.rs  executor.rs  handlers.rs  lib.rs  node.rs  pipeline_sse.rs  plugin.rs  semantic.rs
crates/vil_ai_gateway/: Cargo.toml  README.md
crates/vil_ai_gateway/src/: circuit_breaker.rs  config.rs  cost.rs  gateway.rs  handlers.rs  health.rs  lib.rs  metrics.rs  pipeline_sse.rs  plugin.rs  semantic.rs
crates/vil_ai_trace/: Cargo.toml  README.md
crates/vil_ai_trace/src/: exporter.rs  handlers.rs  lib.rs  metrics.rs  pipeline_sse.rs  plugin.rs  span.rs  tracer.rs  vil_semantic.rs
crates/vil_bench_llm/: Cargo.toml  README.md
crates/vil_bench_llm/src/: benchmark.rs  built_in.rs  handlers.rs  lib.rs  pipeline_sse.rs  plugin.rs  report.rs  suite.rs  vil_semantic.rs
crates/vil_cache/: Cargo.toml  README.md
crates/vil_cache/src/: cache_trait.rs  lib.rs  redis_backend.rs  shm_backend.rs
crates/vil_capsule/: Cargo.toml  README.md
crates/vil_capsule/src/: bridge.rs  host.rs  lib.rs  pool.rs  runner.rs  wasi_host.rs
crates/vil_chunker/: Cargo.toml  README.md
crates/vil_chunker/src/: code.rs  handlers.rs  lib.rs  pipeline_sse.rs  plugin.rs  semantic.rs  sliding.rs  strategy.rs  table.rs  vil_semantic.rs
crates/vil_cli/: Cargo.toml  README.md
crates/vil_cli/src/: call_resolver.rs  checker.rs  codegen.rs  compiler.rs  dashboard.html  dashboard.rs  dev_mode.rs  doctor.rs  error_catalog.rs  errors.rs  gen_scaffold.rs  generate.rs  hot_reload.rs  main.rs  manifest.rs  mock_server.rs  node_types.rs  orm_cmd.rs  pipeline_init.rs  project_init.rs  provision.rs  provision_prepare.rs  runner.rs  sdk_manager.rs  server_scaffold.rs  templates.rs  test_runner.rs  tracer.rs  transform_builder.rs  viz_bridge.rs  vlb_builder.rs  vlb_inspector.rs  wasm_builder.rs  yaml_pipeline.rs  yaml_tools.rs
crates/vil_cli/templates/ai-inference/: Cargo.toml
crates/vil_cli/templates/ai-inference/src/: main.rs
crates/vil_cli/templates/event-fanout/: Cargo.toml
crates/vil_cli/templates/event-fanout/src/: main.rs
crates/vil_cli/templates/load-balancer/: Cargo.toml
crates/vil_cli/templates/load-balancer/src/: main.rs
crates/vil_cli/templates/stream-filter/: Cargo.toml
crates/vil_cli/templates/webhook-forwarder/: Cargo.toml
crates/vil_cli_compile/: Cargo.toml
crates/vil_cli_compile/src/: call_resolver.rs  codegen.rs  compiler.rs  gen_scaffold.rs  lib.rs  transform_builder.rs  vlb_builder.rs  vlb_inspector.rs
crates/vil_cli_core/: Cargo.toml
crates/vil_cli_core/src/: error_catalog.rs  lib.rs  manifest.rs  node_types.rs  templates.rs
crates/vil_cli_pipeline/: Cargo.toml
crates/vil_cli_pipeline/src/: checker.rs  hot_reload.rs  lib.rs  mock_server.rs  runner.rs  test_runner.rs  viz_bridge.rs  yaml_pipeline.rs
crates/vil_cli_sdk/: Cargo.toml
crates/vil_cli_sdk/src/: lib.rs  provision.rs  wasm_builder.rs
crates/vil_cli_server/: Cargo.toml
crates/vil_cli_server/src/: deploy.rs  lib.rs  server_dev.rs  server_scaffold.rs  tracer.rs
crates/vil_cli_server/src/orm/: manifest_export.rs  mod.rs  model_gen.rs  project_gen.rs  schema_parser.rs  service_gen.rs
crates/vil_codegen_c/: Cargo.toml  README.md
crates/vil_codegen_c/src/: lib.rs
crates/vil_codegen_rust/: Cargo.toml  README.md
crates/vil_codegen_rust/src/: lib.rs  message.rs  process.rs  workflow.rs
crates/vil_connector_macros/: Cargo.toml  README.md
crates/vil_connector_macros/src/: lib.rs
crates/vil_consensus/: Cargo.toml  README.md
crates/vil_consensus/src/: config.rs  engine.rs  handlers.rs  lib.rs  pipeline_sse.rs  plugin.rs  scorer.rs  semantic.rs  strategy.rs
crates/vil_context_optimizer/: Cargo.toml  README.md
crates/vil_context_optimizer/src/: budget.rs  dedup.rs  handlers.rs  lib.rs  optimizer.rs  pipeline_sse.rs  plugin.rs  scorer.rs  semantic.rs  strategy.rs
crates/vil_cost_tracker/: Cargo.toml  README.md
crates/vil_cost_tracker/src/: budget.rs  handlers.rs  lib.rs  pipeline_sse.rs  plugin.rs  report.rs  semantic.rs  tracker.rs
crates/vil_crawler/: Cargo.toml  README.md
crates/vil_crawler/src/: config.rs  crawler.rs  handlers.rs  lib.rs  pipeline_sse.rs  plugin.rs  result.rs  robots.rs  semantic.rs
crates/vil_crypto/: Cargo.toml
crates/vil_crypto/src/: lib.rs
crates/vil_data_prep/: Cargo.toml  README.md
crates/vil_data_prep/src/: dedup.rs  filter.rs  formatter.rs  handlers.rs  lib.rs  pipeline.rs  pipeline_sse.rs  plugin.rs  vil_semantic.rs
crates/vil_db_cassandra/: Cargo.toml  README.md
crates/vil_db_cassandra/src/: client.rs  config.rs  error.rs  events.rs  lib.rs  ops.rs  process.rs  state.rs  types.rs
crates/vil_db_clickhouse/: Cargo.toml  README.md
crates/vil_db_clickhouse/src/: batch.rs  client.rs  config.rs  error.rs  events.rs  lib.rs  process.rs  state.rs
crates/vil_db_dynamodb/: Cargo.toml  README.md
crates/vil_db_dynamodb/src/: client.rs  config.rs  error.rs  events.rs  lib.rs  ops.rs  process.rs  state.rs  types.rs
docs-dev/: COMPLIANCE.md  (+7 more)
test-wizard/: .gitignore  Cargo.toml  README.md  app.vil.yaml
test-wizard/src/: main.rs
(+3750 files in other folders)
