[package]
name = "test-wizard"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vil_server = { path = "/home/abraham/Prdmid/vil-project/vil/crates/vil_server" }
vil_server_core = { path = "/home/abraham/Prdmid/vil-project/vil/crates/vil_server_core" }
vil_json = { path = "/home/abraham/Prdmid/vil-project/vil/crates/vil_json" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bytes = "1"
axum = { version = "0.7", features = ["macros"] }
vil_graphql = { path = "/home/abraham/Prdmid/vil-project/vil/crates/vil_graphql" }
vil_grpc = { path = "/home/abraham/Prdmid/vil-project/vil/crates/vil_grpc" }
