[package]
name = "vil_agent"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VIL Agent Plugin — tool-calling AI agent with ReAct loop"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"
readme = "README.md"

[dependencies]
vil_sdk = { version = "0.4", path = "../vil_sdk" }
vil_server_core = { version = "0.4", path = "../vil_server_core" }
vil_server = { version = "0.4", path = "../vil_server" }
vil_llm = { version = "0.4", path = "../vil_llm" }
vil_rag = { version = "0.4", path = "../vil_rag" }
vil_json = { version = "0.4", path = "../vil_json" }
vil_macros = { version = "0.4", path = "../vil_macros" }
vil_log = { workspace = true }
tracing = { workspace = true }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
