[package]
name = "vil_ai_compiler"
description = "AI pipeline compiler — compile RAG/agent workflows to optimized execution plans at build time"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
vil_macros = { path = "../vil_macros" }
vil_server_core = { path = "../vil_server_core" }
vil_sdk = { path = "../vil_sdk" }
vil_server = { path = "../vil_server" }
axum = { version = "0.7", features = ["macros"] }
