[package]
name = "vil_ai_compiler"
description = "AI pipeline compiler — compile RAG/agent workflows to optimized execution plans at build time"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
vil_log = { workspace = true }
tracing = { workspace = true }
vil_macros = { version = "0.3", path = "../vil_macros" }
vil_server_core = { version = "0.3", path = "../vil_server_core" }
vil_sdk = { version = "0.3", path = "../vil_sdk" }
vil_server = { version = "0.3", path = "../vil_server" }
axum = { version = "0.7", features = ["macros"] }
