[package]
name = "vil_ai_gateway"
version = "0.1.0"
edition = "2021"
description = "VIL AI Gateway — intelligent LLM routing with health, failover, cost, circuit breaker"

[dependencies]
vil_llm          = { version = "0.1.0", path = "../vil_llm" }
vil_macros       = { version = "0.1.0", path = "../vil_macros" }
vil_server_core  = { version = "0.1.0", path = "../vil_server_core" }
vil_sdk          = { version = "0.1.0", path = "../vil_sdk" }
vil_server       = { version = "0.1.0", path = "../vil_server" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
async-trait = "0.1"
tracing = "0.1"
parking_lot = "0.12"
axum = { version = "0.7", features = ["json"] }
