[package]
name = "vil_ai_trace"
description = "N11 — AI Observability + Tracing: trace spans, AI metrics, JSON export"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
vil_macros      = { workspace = true }
vil_server_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
parking_lot = "0.12"

vil_sdk = { version = "0.2", path = "../vil_sdk" }
vil_server = { version = "0.2", path = "../vil_server" }
axum = { version = "0.7", features = ["macros"] }