[package]
name = "vil_bench_llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "N04 — LLM Benchmark Suite: pluggable benchmarks with built-in math, logic, factual Q&A"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

vil_sdk = { path = "../vil_sdk" }
vil_server_core = { path = "../vil_server_core" }
vil_server = { path = "../vil_server" }
vil_macros = { path = "../vil_macros" }
axum = { version = "0.7", features = ["macros"] }
[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
