[package]
name = "vil_cache"
version = "0.1.0"
edition = "2021"
description = "VIL Cache Abstraction — SHM + Redis backends, separated from DB semantic"
license = "Apache-2.0"

[dependencies]
vil_server_core = { path = "../vil_server_core" }
vil_db_redis = { path = "../vil_db_redis" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
