[package]
name = "vil_cache"
version.workspace = true
edition = "2021"
description = "VIL Cache Abstraction — SHM + Redis backends, separated from DB semantic"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
vil_server_core = { version = "0.2", path = "../vil_server_core" }
vil_db_redis = { version = "0.2", path = "../vil_db_redis" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
