[package]
name = "vil_capsule"
description = "VIL WASM Capsule — sandboxed WebAssembly execution with wasmtime pool"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []
# Enable this feature to load and run WASM plugins via wasmtime
wasm = ["dep:wasmtime"]
# Enable WASI Preview 2 capabilities (filesystem, env, clock) for WASM capsules
wasi = ["wasm", "dep:wasmtime-wasi"]

[dependencies]
vil_types = { version = "0.1.0", path = "../vil_types" }
vil_ir = { version = "0.1.0", path = "../vil_ir" }

# Feature-gated WASM runtime
wasmtime = { version = "24", optional = true }
wasmtime-wasi = { version = "24", optional = true }
dashmap = "5.5"
