[package]
name = "vil_chunker"
version = "0.1.0"
edition = "2021"
description = "VIL Advanced Semantic Chunker — SIMD-optimized, zero-alloc text chunking with sentence-boundary, sliding-window, code-aware, and table strategies"

[dependencies]
vil_tokenizer = { path = "../vil_tokenizer" }
vil_sdk = { path = "../vil_sdk" }
vil_server_core = { path = "../vil_server_core" }
vil_server = { path = "../vil_server" }
vil_macros = { path = "../vil_macros" }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
