[package]
name = "vil_chunker"
version = "0.1.0"
edition = "2021"
description = "VIL Advanced Semantic Chunker — SIMD-optimized, zero-alloc text chunking with sentence-boundary, sliding-window, code-aware, and table strategies"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"
readme = "README.md"

[dependencies]
vil_tokenizer = { version = "0.1.0", path = "../vil_tokenizer" }
vil_sdk = { version = "0.1.0", path = "../vil_sdk" }
vil_server_core = { version = "0.1.0", path = "../vil_server_core" }
vil_server = { version = "0.1.0", path = "../vil_server" }
vil_macros = { version = "0.1.0", path = "../vil_macros" }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
